# LLM_promt_injection_detector

./: README.md  metrics.py  pyproject.toml  requirements.txt
InjectionDetector/: LLM_detector.py  LLM_output_detector.py  YandexGPT_API.py  __init__.py  canary_detector.py  heuristic_detector.py  system_prompt.txt
LLMServer/: README.md
LLMServer/foreign/: .secrets  app.py  config.json  requirements.txt  utils.py
LLMServer/native/: .secrets  app.py  config.py  utils.py
example/: main.py
example/static/js/: script.js
example/templates/: index.html
